--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title>Lab 4 | JSON Fun</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="css/normalize.css" rel="stylesheet" />
-    <link href="css/styles.css" rel="stylesheet" />
-    <script src="js/json.js" defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JSON Example</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header></header>
-    <section></section>
+    <header>
+        <h1>JSON Example</h1>
+        <p>Displaying data from a JSON object dynamically</p>
+    </header>
+    <section id="data-container">
+        <p>Loading data...</p>
+    </section>
+    <script src="js/json.js"></script>
 </body>
 </html>
